Add ecto.create and ecto.migrate to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,4 @@ install:
   - mix local.rebar --force
   - mix local.hex --force
   - mix deps.get
+  - MIX_ENV=test mix do ecto.create, ecto.migrate
