--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ otp_release:
 env:
   - MIX_ENV=test
 cache:
-  - _build/test
+  directories:
+    - deps
+    - _build/
 install:
   - mix local.rebar --force
   - mix local.hex --force
