NPCs will respawn after a spawn interval
The genserver for them will detect a death and set a timestamp for
respawn. After this respawn time has passed it will give max health back
to the NPC and enter the room.

--- a/.projections.json
+++ b/.projections.json
@@ -1,3 +1,5 @@
 {
-  "priv/repo/migrations":{ "type": "migration", }
+  "priv/repo/migrations": { "type": "migration" },
+  "lib/*.ex": { "alternate": "test/{}_test.exs" },
+  "test/*_test.exs": { "alternate": "lib/{}.ex" }
 }
