--- a/assets/package.json
+++ b/assets/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "sizzle": "^2.3.3",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-brunch": "6.1.1",
