Add in races, classes, and skills documentation
Add some of the documentation right into the form, where appropriate

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,5 +19,7 @@ pages:
   - Web Client: client.md
   - Admin:
       - Dashboard: admin/index.md
+      - Classes: admin/classes.md
+      - Effects: admin/effects.md
       - Races: admin/races.md
   - Metrics: metrics.md
