Add in GMCP events to the docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ pages:
   - Setup: setup.md
   - Web Client: client.md
   - Game:
+    - GMCP: game/gmcp.md
     - Races: game/races.md
   - Admin:
     - Dashboard: admin/index.md
