--- a/priv/help/en.yml
+++ b/priv/help/en.yml
@@ -19,7 +19,11 @@
     on them. You can also use and target at the same time. Your target will be filled
     automatically when an enemy (player or otherwise) targets you.
 
+    Make sure you view what {white}skills{/white} you have before attacking anything.
+
     Examples:
+    [ ]> {white}skills{/white}
+
     [ ]> {white}target bandit{/white}
     [ ]> {white}slash{/white}
 
