--- a/priv/help/en.yml
+++ b/priv/help/en.yml
@@ -8,23 +8,23 @@
 
     Each experience point you gain can be used to train new skills. Each skill costs
     1000 experience if it is the same level as you. For every level below yours it
-    costs 100 experience less, down to a minimum of 100 experience. See {white}help train{/white}
+    costs 100 experience less, down to a minimum of 100 experience. See {command}help train{/command}
     for more information about training skills.
 
 - id: b3074cb3-f52a-42a1-aa1f-f000e940734c
   name: Combat
   short: Basics about combat
   full: |
-    There is no auto combat. You must {white}target{/white} a character before being able to use {white}skills{/white}
+    There is no auto combat. You must {command}target{/command} a character before being able to use {command}skills{/command}
     on them. You can also use and target at the same time. Your target will be filled
     automatically when an enemy (player or otherwise) targets you.
 
-    Make sure you view what {white}skills{/white} you have before attacking anything.
+    Make sure you view what {command}skills{/command} you have before attacking anything.
 
     Examples:
-    [ ]> {white}skills{/white}
+    [ ]> {command}skills{/command}
 
-    [ ]> {white}target bandit{/white}
-    [ ]> {white}slash{/white}
+    [ ]> {command}target bandit{/command}
+    [ ]> {command}slash{/command}
 
-    [ ]> {white}slash bandit{/white}
+    [ ]> {command}slash bandit{/command}
