--- a/assets/package.json
+++ b/assets/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.9.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
+    "popper.js": "^1.14.3",
     "sizzle": "^2.3.3",
     "underscore": "^1.9.0"
   },
