--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,24 @@ services:
       - 4000:4000
       - 5555:5555
 
+  grafana:
+    depends_on:
+      - prometheus
+    environment:
+      GF_ALERTING_ENABLED: "false"
+      GF_METRICS_ENABLED: "true"
+      GF_SECURITY_ADMIN_PASSWORD: admin
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SNAPSHOTS_EXTERNAL_ENABLED: "false"
+    image: grafana/grafana:5.2.1
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana-data:/var/lib/grafana
+      - ./contrib/grafana/dashboard.yml:/etc/grafana/provisioning/dashboards/default.yml:ro
+      - ./contrib/grafana/dashboards:/etc/grafana/dashboards:ro
+      - ./contrib/grafana/datasource.yml:/etc/grafana/provisioning/datasources/prometheus.yml:ro
+
   postgres:
     image: postgres:10.4-alpine
     environment:
