--- a/assets/package.json
+++ b/assets/package.json
@@ -6,8 +6,6 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.0",
     "phoenix": "file:../deps/phoenix",
@@ -20,10 +18,15 @@
     "why-did-you-update": "^0.1.1"
   },
   "devDependencies": {
-    "babel-brunch": "6.1.1",
-    "brunch": "2.10.9",
-    "clean-css-brunch": "2.10.0",
-    "sass-brunch": "^2.10.4",
-    "uglify-js-brunch": "2.10.0"
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-loader": "^8.0.0",
+    "copy-webpack-plugin": "^4.5.0",
+    "css-loader": "^0.28.10",
+    "mini-css-extract-plugin": "^0.4.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "webpack": "4.4.0",
+    "webpack-cli": "^2.0.10"
   }
 }
