--- a/assets/package.json
+++ b/assets/package.json
@@ -6,6 +6,9 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "admin-lte": "^2.4.8",
+    "bootstrap-sass": "^3.3.7",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
@@ -14,6 +17,7 @@
     "react-dom": "^16.4.0",
     "sizzle": "^2.3.3",
     "underscore": "^1.9.0",
+    "webpack-cli": "^3.1.2",
     "why-did-you-update": "^0.1.1"
   },
   "devDependencies": {
@@ -23,13 +27,14 @@
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
+    "file-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "4.4.0",
-    "webpack-cli": "^2.0.10"
+    "url-loader": "^1.1.2",
+    "webpack": "^4.25.1"
   }
 }
