--- a/assets/package.json
+++ b/assets/package.json
@@ -14,8 +14,10 @@
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "popper.js": "^1.14.3",
-    "react": "^16.4.0",
+    "react": "^16.6.3",
     "react-dom": "^16.4.0",
+    "react-redux": "^5.1.1",
+    "redux-thunk": "^2.3.0",
     "sizzle": "^2.3.3",
     "styled-components": "^4.1.1",
     "underscore": "^1.9.0",
