Setup firewall, install nginx/certbot, template files

--- a/deploy/group_vars/all.yml
+++ b/deploy/group_vars/all.yml
@@ -18,3 +18,11 @@ postgresql_users:
 postgresql_user_privileges:
   - name: deploy
     role_attr_flags: "SUPERUSER"
+
+firewall_ports:
+  - rule: allow
+    port: http
+  - rule: allow
+    port: https
+  - rule: allow
+    port: ssh
