--- a/deploy/setup.yml
+++ b/deploy/setup.yml
@@ -9,3 +9,4 @@
     - { role: jnv.unattended-upgrades, become: yes, tags: ['upgrades'] }
     - { role: geerlingguy.ntp, become: yes, tags: ['ntp'] }
     - { role: ANXS.postgresql, become: yes, tags: ['postgres'] }
+    - { role: prometheus-exporters, tags: ['prometheus'], actions: ['node_exporter'] }
