--- a/deploy/requirements.yml
+++ b/deploy/requirements.yml
@@ -8,12 +8,12 @@
   version: 1.4.2
 - src: smartlogic.github_keys
   version: 0.2.0
-- src: git+git@github.com:smartlogic/ansible-role-traefik
+- src: https://github.com/smartlogic/ansible-role-traefik
   name: traefik
   version: 0.2.0
-- krc: git+git@github.com:smartlogic/ansible-role-prometheus-exporters
+- src: https://github.com/smartlogic/ansible-role-prometheus-exporters
   name: prometheus-exporters
   version: 0.5.3
-- src: git+git@github.com:smartlogic/ansible-role-firewall
+- src: https://github.com/smartlogic/ansible-role-firewall
   name: firewall
   version: 0.1.1
