--- a/deploy/group_vars/all.yml
+++ b/deploy/group_vars/all.yml
@@ -33,6 +33,10 @@ firewall_ports:
     port: https
   - rule: allow
     port: ssh
+  - rule: allow
+    port: 5555
+  - rule: allow
+    port: 5443
 
 node_exporter_version: "0.17.0"
 node_exporter_checksum: "d2e00d805dbfdc67e7291ce2d2ff151f758dd7401dd993411ff3818d0e231489"
