Copy over the travis test file into config

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ cache:
   directories:
     - deps
     - _build/
+before_script:
+  - cp .travis/test.exs config/test.exs
 install:
   - mix local.rebar --force
   - mix local.hex --force
