--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,14 @@ language: elixir
 services:
   - postgresql
 addons:
-    postgresql: "10"
+  postgresql: "10"
+  apt:
+    packages:
+    - postgresql-10
+    - postgresql-client-10
+env:
+  global:
+  - PGPORT=5433
 elixir:
   - 1.8.0
 otp_release:
@@ -14,6 +21,7 @@ cache:
     - deps
     - _build/
 install:
+  - cp .travis/test.exs config/test.exs
   - mix local.rebar --force
   - mix local.hex --force
   - mix deps.get
