Create a pg user with a known password

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ cache:
     - deps
     - _build/
 install:
+  - psql -c "create user exventure with superuser password 'password';" -U postgres
   - cp .travis/test.exs config/test.exs
   - mix local.rebar --force
   - mix local.hex --force
