--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ cache:
     - deps
     - _build/
 install:
-  - psql -p 5433 -U postgres -c "create user exventure with superuser password 'password';"
+  - sudo -u postgres psql -p 5433 -c "create user exventure with superuser password 'password';"
   - cp .travis/test.exs config/test.exs
   - mix local.rebar --force
   - mix local.hex --force
