Set up a docker build for generating a release
Travis config for publishing to s3 after a build

--- a/.dockerignore
+++ b/.dockerignore
@@ -29,6 +29,8 @@ backups
 schema.sql
 config/prod.secret.exs
 config/dev.local.exs
+/*.sh
+/*.tar.gz
 
 # Ignores for Docker context only below
 .git
