Update the docker release file

--- a/Dockerfile.releaser
+++ b/Dockerfile.releaser
@@ -1,8 +1,5 @@
 FROM elixir:1.7 as builder
 
-ARG sha
-ENV SHA=${sha}
-
 RUN mix local.rebar --force && \
     mix local.hex --force
 
@@ -16,7 +13,7 @@ RUN mix deps.compile
 FROM node:10.9 as frontend
 
 WORKDIR /app
-COPY assets/package*.json /app/
+COPY assets/package.json assets/yarn.lock /app/
 COPY --from=builder /app/deps/phoenix /deps/phoenix
 COPY --from=builder /app/deps/phoenix_html /deps/phoenix_html
 
@@ -24,6 +21,9 @@ RUN npm install -g yarn && yarn install
 
 COPY assets /app
 RUN npm run deploy
+
+ARG sha
+ENV SHA=${sha}
 
 FROM builder as releaser
 COPY --from=frontend /priv/static /app/priv/static
