--- a/Dockerfile.releaser
+++ b/Dockerfile.releaser
@@ -1,5 +1,6 @@
-FROM grapevinehaus/elixir:1.9.4-1 as builder
+FROM hexpm/elixir:1.11.1-erlang-23.1.1-ubuntu-groovy-20201022.1 as builder
 
+RUN apt install -y git build-essential
 RUN mix local.rebar --force && mix local.hex --force
 WORKDIR /app
 ENV MIX_ENV=prod
@@ -7,12 +8,12 @@ COPY mix.* /app/
 RUN mix deps.get --only prod
 RUN mix deps.compile
 
-FROM node:10.9 as frontend
+FROM node:12.18 as frontend
 WORKDIR /app
-COPY assets/package*.json /app/
+COPY assets/package.json assets/yarn.lock /app/
 COPY --from=builder /app/deps/phoenix /deps/phoenix
 COPY --from=builder /app/deps/phoenix_html /deps/phoenix_html
-RUN npm install -g yarn && yarn install
+RUN yarn install
 COPY assets /app
 RUN npm run deploy
 
