Pull in Kantele's JS client

--- a/assets/package.json
+++ b/assets/package.json
@@ -4,32 +4,53 @@
   "scripts": {
     "build": "webpack --mode development",
     "deploy": "webpack --mode production",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+    "lint:ci": "eslint '*/**/*.{js,ts,tsx}'",
+    "test": "jest",
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
     "node-sass": "^4.12.0",
-    "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html",
+    "react": "^16.7.0",
+    "react-dom": "^16.5.2",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "tailwindcss": "^1.9.6"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@svgr/webpack": "^5.4.0",
+    "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.0",
-    "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^0.28.10",
+    "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.2.0",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.2",
     "file-loader": "^4.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "jest": "^26.4.2",
+    "jest-cli": "^24.1.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^8.1.4",
-    "postcss-loader": "^4.0.4",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^2.1.2",
+    "redux-devtools": "^3.5.0",
     "sass-loader": "^8.0.0",
+    "source-map-loader": "^1.0.2",
     "style-loader": "^1.0.0",
+    "terser-webpack-plugin": "^2.1.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^2.2.0",
     "webpack": "^4.29.3",
