--- a/assets/package.json
+++ b/assets/package.json
@@ -10,14 +10,14 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "node-sass": "^4.12.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.5.2",
+    "node-sass": "^5.0",
+    "react": "^17.0",
+    "react-dom": "^17.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "tailwindcss": "^1.9.6"
+    "tailwindcss": "^2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -29,31 +29,32 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@svgr/webpack": "^5.4.0",
-    "babel-jest": "^24.1.0",
+    "autoprefixer": "^10.0.4",
+    "babel-jest": "^26.0",
     "babel-loader": "^8.0.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.2.0",
+    "copy-webpack-plugin": "^6.0",
+    "css-loader": "^5.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.2",
-    "file-loader": "^4.2.0",
+    "file-loader": "^6.0",
     "jest": "^26.4.2",
-    "jest-cli": "^24.1.0",
-    "mini-css-extract-plugin": "^0.8.0",
+    "jest-cli": "^26.0",
+    "mini-css-extract-plugin": "^1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^8.1.4",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
+    "postcss-import": "^13.0",
+    "postcss-loader": "^4.0",
     "prettier": "^2.1.2",
     "redux-devtools": "^3.5.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^10.0",
     "source-map-loader": "^1.0.2",
-    "style-loader": "^1.0.0",
-    "terser-webpack-plugin": "^2.1.0",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
+    "style-loader": "^2.0",
+    "terser-webpack-plugin": "^5.0",
+    "uglifyjs-webpack-plugin": "^2.2",
+    "url-loader": "^4.0",
+    "webpack": "^5.0",
+    "webpack-cli": "^4.2"
   }
 }
