--- a/assets/package.json
+++ b/assets/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "node-sass": "^5.0",
+    "phoenix_html": "^2.14.2",
     "react": "^17.0",
     "react-dom": "^17.0",
     "react-redux": "^7.1.0",
