--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,7 @@
-name: Elixir CI
+name: Tests
 on: push
 jobs:
-  build:
+  elixir:
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -42,6 +42,33 @@ jobs:
       env:
         MIX_ENV: test
 
+  javascript:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
+    - name: Install Dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y git build-essential
+    - name: Setup node
+      run: |
+        npm install -g yarn
+        cd example/assets
+        yarn install
+    - name: Verify application
+      run: |
+        cd example/assets
+        yarn lint-ci
+        yarn jest
+
+  dispatch:
+    runs-on: ubuntu-latest
+    needs: [elixir, javascript]
+    steps:
+    - uses: actions/checkout@v1
     - name: Repository Dispatch
       if: github.ref == 'refs/heads/kalevala'
       uses: peter-evans/repository-dispatch@v1
