Set javascript default working directory to assets

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,6 +53,10 @@ jobs:
 
   javascript:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: assets
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-node@v1
@@ -71,11 +75,9 @@ jobs:
     - name: Setup node
       run: |
         npm install -g yarn
-        cd assets
         yarn install
     - name: Verify application
       run: |
-        cd assets
         yarn lint:ci
         yarn jest
 
