--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,18 +110,33 @@ jobs:
         tags: oestrich/exventure.org:${{ github.sha }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
-    - name: Deploy
-      uses: deliverybot/helm@v1
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: [elixir, javascript]
+    if: github.ref == 'refs/heads/kalevala'
+    steps:
+    - uses: actions/checkout@v1
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
       with:
-        helm: helm3
-        release: exventure
-        namespace: static-sites
-        chart: static
-        token: '${{ github.token }}'
-        values: |
-          image:
-            repository: oestrich/exventure.org
-          web:
-            host: exventure.org
-      env:
-        KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: ./
+        file: ./Dockerfile
+        push: true
+        tags: oestrich/exventure:${{ github.sha }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
