--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/setup-elixir@v1.5.0
       with:
+        experimental-otp: true
         otp-version: "23.1.2"
         elixir-version: "1.11.2"
     - name: Install Dependencies
