Set an environment_url for documentation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,6 +147,7 @@ jobs:
       with:
         token: "${{ github.token }}"
         target_url: https://exventure.org/
+        environment_url: https://exventure.org/
         state: "failure"
         deployment_id: ${{ steps.deployment.outputs.deployment_id }}
 
