Set separate docker cache keys for buildx
One for deploy and one for docs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,9 +99,9 @@ jobs:
       uses: actions/cache@v2
       with:
         path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        key: ${{ runner.os }}-buildx-docs-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-
+          ${{ runner.os }}-buildx-docs-
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
@@ -168,9 +168,9 @@ jobs:
       uses: actions/cache@v2
       with:
         path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        key: ${{ runner.os }}-buildx-deploy-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-
+          ${{ runner.os }}-buildx-deploy-
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
