--- a/assets/package.json
+++ b/assets/package.json
@@ -2,8 +2,15 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode development",
-    "deploy": "webpack --mode production",
+    "build:js": "node build.js",
+    "build:js:watch": "WATCH=true node build.js",
+    "build:css": "postcss ./css/app.scss --output ../priv/static/css/app.css",
+    "build:css:watch": "postcss ./css/app.scss --output ../priv/static/css/app.css --watch",
+    "build:static": "cpx 'static/**/*' ../priv/static/",
+    "build:static:watch": "cpx 'static/**/*' ../priv/static/ --watch",
+    "deploy:js": "node build.js",
+    "deploy:css": "postcss ./css/app.scss --output ../priv/static/css/app.css",
+    "deploy:static": "cpx 'static/**/*' ../priv/static/",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "lint:ci": "eslint '*/**/*.{js,ts,tsx}'",
     "test": "jest",
@@ -11,7 +18,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.0.0",
-    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/forms": "^0.3.3",
     "node-sass": "^6.0",
     "phoenix_html": "^2.14.2",
     "react": "^17.0",
@@ -26,17 +33,21 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@csstools/postcss-sass": "^4.0.0",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@svgr/webpack": "^5.4.0",
-    "autoprefixer": "^10.0.4",
+    "autoprefixer": "^10.2.6",
     "babel-jest": "^26.0",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^8.0",
+    "cpx": "^1.5.0",
     "css-loader": "^5.0",
+    "esbuild": "^0.12.6",
+    "esbuild-plugin-svgr": "^0.0.1",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^8.0",
     "eslint-plugin-prettier": "^3.1.4",
@@ -46,9 +57,13 @@
     "jest-cli": "^26.0",
     "mini-css-extract-plugin": "^1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss": "^8.1.4",
+    "postcss": "^8.3.0",
+    "postcss-advanced-variables": "^3.0.1",
+    "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0",
     "postcss-loader": "^5.0",
+    "postcss-nested": "^5.0.5",
+    "postcss-scss": "^3.0.5",
     "prettier": "^2.1.2",
     "redux-devtools": "^3.5.0",
     "sass-loader": "^11.0",
@@ -58,6 +73,7 @@
     "uglifyjs-webpack-plugin": "^2.2",
     "url-loader": "^4.0",
     "webpack": "^5.0",
-    "webpack-cli": "^4.2"
+    "webpack-cli": "^4.2",
+    "yarn": "^1.22.10"
   }
 }
